--- a/style.css
+++ b/style.css
@@ -2,12 +2,9 @@ nav{
     justify-content: end;
    display: flex;
     gap: 10px;
-}
-
-nav {
   flex: 3;
   background-color: #ffff;
-  padding: 20px;
+  padding: 10px;
 }
 
 strong{
@@ -17,13 +14,35 @@ strong{
     padding-left: 2%;
 }
 
-aside{
-    grid-area: repeat(4, 1fr);
-  }
+.adv{
+  width: 10em;
+  height: 5ex;
+  background-color: lightblue;
+  border: 2px solid black;
+  border-radius: 10px;
+  font-weight: bold;
+  color: black;
+  cursor: pointer;
+}
+
+.adv:active {
+  font-size: 85%;
+  box-shadow: 0 0 10px #000 inset;
+}
+
+.adv:hover{
+  background-color: orange;
+}
+
+/* .adv:active{ */
+  
+
 
 header{
     background-color: blue;
     height: 120px;
+    border-style: dashed;
+    margin: -.5%;
   }
   h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -46,3 +65,18 @@ header{
     margin: 20px;
     padding: 20px;
   }
+  
+  p{
+    text-align: center;
+    font-family: monospace;
+    font-size: larger;
+  }
+
+  /* h3{ */
+  
+  
+
+footer{
+  /* display: ; */
+  text-align: center;
+}
