--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ nav{
    display: flex;
     gap: 10px;
   flex: 3;
-  background-color: #ffff;
+  background-color: #3a98b9;
   padding: 10px;
 }
 /* header */
@@ -30,7 +30,8 @@ strong{
 .adv:active {
   font-size: 85%;
   box-shadow: 0 0 10px #000 inset;
-}
+
+  }
 
 .adv:hover{
   background-color: orange;
@@ -54,10 +55,6 @@ header{
     background-color: grey;
   }
 
-  /* set up */
-  section{
-        display: block;
-  }
   
   /* Resume section */
   div{
@@ -69,7 +66,7 @@ header{
   
   /* about me */
   p{
-
+    width: 35%;
     text-align: right;
     font-family: monospace;
     font-size: larger;
@@ -89,7 +86,7 @@ section{
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 2fr 1fr 1fr;
     background-color: lightblue;
-    color: grey;
+    color: black;
     font-size: x-large;
     border-style: solid double none;
 
@@ -97,6 +94,5 @@ section{
 
 .fit-picture{
   display: inline-block;
-
-  height: 200px
+  height: 300px
 }
