--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ strong{
   font-weight: bold;
   color: black;
   cursor: pointer;
+  position: absolute;
+    top: 70px;
+    left: 69px;
 }
 
 .adv:active {
@@ -48,20 +51,23 @@ header{
   h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: right;
-    
+    position: relative;
+    top: -450px;
+    right: 590px;
   }
+
   body{
     display: inline-flexbox;
     background-color: grey;
   }
 
-  
   /* Resume section */
   div{
     color: black;
     grid-template-rows: auto;
     padding: 20px;
     border-style: solid double none;
+    text-shadow: #000;
   }
   
   /* about me */
@@ -71,7 +77,11 @@ header{
     font-family: monospace;
     font-size: larger;
     word-wrap: normal;
-
+    position: relative;
+    left: 800px;
+    top: -400px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
   }
 
 
@@ -90,6 +100,14 @@ section{
     font-size: x-large;
     border-style: solid double none;
 
+}
+
+.fit-picture1{
+  display: inline-block;
+  height: 500px;
+  top: 30px;
+  position: relative;
+  border-style: solid;
 }
 
 .fit-picture{
