--- a/style.css
+++ b/style.css
@@ -114,3 +114,8 @@ section{
   display: inline-block;
   height: 300px
 }
+
+/* main{ */
+  /* display: grid; */
+  /* grid-template-columns: 1fr 2fr; */
+/* } */
