--- a/style.css
+++ b/style.css
@@ -48,12 +48,18 @@ header{
   }
 
   /* name */
-  h1 {
+  .name {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: right;
-    position: relative;
-    top: -450px;
-    right: 590px;
+  }
+
+  #about-me{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  #about-me .content{
+    width: 500px;
   }
 
   body{
@@ -62,28 +68,13 @@ header{
   }
 
   /* Resume section */
-  div{
+  .resume-section{
     color: black;
     grid-template-rows: auto;
     padding: 20px;
     border-style: solid double none;
     text-shadow: #000;
   }
-  
-  /* about me */
-  p{
-    width: 35%;
-    text-align: right;
-    font-family: monospace;
-    font-size: larger;
-    word-wrap: normal;
-    position: relative;
-    left: 800px;
-    top: -400px;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-  }
-
 
 footer{
   /* display: ; */
@@ -102,15 +93,7 @@ section{
 
 }
 
-.fit-picture1{
-  display: inline-block;
-  height: 500px;
-  top: 30px;
-  position: relative;
-  border-style: solid;
-}
-
 .fit-picture{
-  display: inline-block;
-  height: 300px
+  display: flex;
+  border: 2px;
 }
