--- a/style.css
+++ b/style.css
@@ -15,30 +15,6 @@ strong{
     padding-left: 2%;
 }
 
-/* button */
-.adv{
-  width: 10em;
-  height: 5ex;
-  background-color: lightblue;
-  border: 2px solid black;
-  border-radius: 10px;
-  font-weight: bold;
-  color: black;
-  cursor: pointer;
-  position: absolute;
-    top: 70px;
-    left: 69px;
-}
-
-.adv:active {
-  font-size: 85%;
-  box-shadow: 0 0 10px #000 inset;
-
-  }
-
-.adv:hover{
-  background-color: orange;
-}
 
 header{
     background-color: blue;
@@ -55,25 +31,25 @@ header{
   #about-me{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
+    top: 30px;
+    position: relative;
   }
 
   #about-me .content{
     width: 500px;
+    text-align: center;
   }
 
   body{
-    display: inline-flexbox;
     background-color: grey;
   }
 
   /* Resume section */
   .resume-section{
     color: black;
-    grid-template-rows: auto;
     padding: 20px;
     border-style: solid double none;
-    text-shadow: #000;
   }
 
 footer{
@@ -84,8 +60,6 @@ footer{
 /* work section */
 section{
     text-align: center;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 2fr 1fr 1fr;
     background-color: lightblue;
     color: black;
     font-size: x-large;
@@ -96,4 +70,26 @@ section{
 .fit-picture{
   display: flex;
   border: 2px;
+}
+
+/* button */
+.adv{
+   width: 10em;
+   height: 5ex;     background-color: lightblue;
+     border: 2px solid black;
+      border-radius: 10px;
+      font-weight: bold;
+      color: black;
+      cursor: pointer;
+      position: absolute;
+        top: 70px;
+        left: 69px;
+}
+    
+.adv:active {
+   font-size: 85%;
+   box-shadow: 0 0 10px #000 inset;
+}
+.adv:hover{
+   background-color: orange;
 }
